[tool]
[tool.poetry]
name = "JunSR3DBot_Deployer"
version = "1.2"
description = "Automatic Deploy JunSR3DUserBot to Heroku"
authors = ["JunSR3D Usta <heroku3
telethon
bs4
requests
rich
gitpython>"]
[tool.poetry.dependencies]
python = "^3.8"
bs4 = "*"
gitpython = "*"
heroku3 = "*"
requests = "*"
rich = "*"
telethon = "*"
